<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_liquid_cheese">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tvAppName"
            style="@style/TextLarge.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_24"
            android:text="@string/txt_full_app_name"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvAppVersion"
            style="@style/TextSmall.Red.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_app_version_unset"
            android:textAlignment="center" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lavLoading"
            android:layout_width="@dimen/dm_64"
            android:layout_height="@dimen/dm_64"
            android:layout_marginTop="@dimen/dm_48"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />

        <TextView
            android:id="@+id/tvLoading"
            style="@style/TextMedium.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_loading" />

    </LinearLayout>

    <TextView
        style="@style/TextSmall.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/txt_developed_by_sato_auto_id_thailand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>